test/error/LexLiteralHexOverflow.fu
public static class Test
{
	public static bool Run()
	{
		long a = 0x123456789012345678901234567890; //ERROR: Integer too big
		return true;
	}
}
